--- a/templates/admin/manager/add.html
+++ b/templates/admin/manager/add.html
@@ -2,86 +2,46 @@
 {{ template "admin/public/page_header.html" .}}
 
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2">
-            {{ template "admin/public/page_aside.html" .}}
-			
-          
-        </div>
-        <div class="col-sm-10">
-           
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    搜索
-                </div>
-                <div class="panel-body">
-                    <form role="form" class="form-inline">
-                        <div class="form-group">
-                            <label for="name">名称</label>
-                            <input type="text" class="form-control" id="name" placeholder="请输入名称">
-                        </div>
 
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-default">开始搜索</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <!--
-                列表展示
-            -->
-            <div class="table-responsive">
-                <table class="table table-bordered">
-                    <thead>
-                    <tr class="th">
-                        <th>编号</th>
-                        <th>图标</th>
-                        <th>名称</th>
-                        <th>价格</th>
-                        <th>邮费</th>
-                       
-                        <th class="text-center">操作</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    <tr>
-                        <td>1</td>
-                        <td>图标</td>
-                        <td>背包1111111</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-					   <tr>
-                        <td>2</td>
-                        <td>图标</td>
-                        <td>thinpad笔记本电脑</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-					   <tr>
-                        <td>3</td>
-                        <td>图标</td>
-                        <td>iphone7</td>
-                        <td>20元</td>
-                        <td>10元</td>
-                      
-                        <td class="text-center">修改  删除</td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
-
+<div class="panel panel-default">
+    <div class="panel-heading">
+        增加管理员
+    </div>
+    <div class="panel-body">
+        <div class="table-responsive input-form">
+            <form action="/admin/manager/doAdd" method="post">
+                <ul>
+                    <li> 管理员名称: <input type="text" name="username" /></li>
+                    <li> 管理员密码: <input type="password" name="password" /></li>
+                    <li> 管理员电话: <input type="text" name="mobile" /></li>
+                    <li> 管理员邮箱: <input type="text" name="email" /></li>
+                    <li> 管理员角色:
+                        <select name="role_id" id="role_id">    
+                            {{range $key,$value := .roleList}}                           
+                                <option value="{{$value.Id}}">{{$value.Title}}</option>   
+                            {{end}}
+                        </select>
+    
+                    </li>
+                    <li>
+                        <br/>
+                        <button type="submit" class="btn btn-default">提交</button>
+                    </li>
+    
+                </ul>
+    
+    
+            </form>
+                
         </div>
     </div>
+
+
 </div>
 
+
 </body>
+
 </html>
-{{ end }}
+
+{{end}}
