--- a/templates/admin/manager/edit.html
+++ b/templates/admin/manager/edit.html
@@ -3,52 +3,43 @@
 
 
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2">
-            {{ template "admin/public/page_aside.html" .}}
-          
-        </div>
-        <div class="col-sm-10">
-          
-            <div class="panel panel-default">              
-			    <div class="panel-heading">
-                  增加商品
-                </div>
-                <div class="panel-body">
-                    <div class="table-responsive input-form">
-                        <form action="/doAdd" method="post">
-                            <ul>
-                                <li>  商品名称: <input type="text" name="title"/></li>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        修改管理员
+    </div>
+    <div class="panel-body">
+        <div class="table-responsive input-form">
+            <form action="/doAdd" method="post">
+                <ul>
+                    <li> 商品名称: <input type="text" name="title" /></li>
 
-                                <li>  商品图片: <input type="file" name="pic"/></li>
-                                <li>  商品价格: <input type="text" name="price"/></li>
-                                <li>  商品邮费: <input type="text" name="fee"/></li>
+                    <li> 商品图片: <input type="file" name="pic" /></li>
+                    <li> 商品价格: <input type="text" name="price" /></li>
+                    <li> 商品邮费: <input type="text" name="fee" /></li>
 
-                                <li>
-                                    商品描述:
-                                    <textarea name="description" id="" cols="60" rows="8"></textarea>
-                                </li>
+                    <li>
+                        商品描述:
+                        <textarea name="description" id="" cols="60" rows="8"></textarea>
+                    </li>
 
-                                <li>
-                                    <br/>
-                                    <button type="submit" class="btn btn-default">提交</button>
-                                </li>
+                    <li>
+                        <br />
+                        <button type="submit" class="btn btn-default">提交</button>
+                    </li>
 
-                            </ul>
+                </ul>
 
 
-                        </form>
-                    </div>
-                </div>
-
-
-            </div>
-
+            </form>
         </div>
     </div>
+
+
 </div>
 
+
 </body>
+
 </html>
-{{ end }}
+
+{{end}}
