--- a/templates/admin/public/page_aside.html
+++ b/templates/admin/public/page_aside.html
@@ -5,24 +5,24 @@
         <h4>管理员管理</h4>
 
         <ul>
-            <li  class="list-group-item"> <a href="/templates/admin/public"> 管理员列表</a></li>
+            <li  class="list-group-item"> <a href="/admin/manager" target="rightMain"> 管理员列表</a></li>
 
-            <li class="list-group-item"> <a href="/add">增加管理员</a></li>
+            <li class="list-group-item"> <a href="/admin/manager/add" target="rightMain">增加管理员</a></li>
         </ul>
     </li>
     <li>
-        <h4>分类管理</h4>
+        <h4>角色管理</h4>
         <ul>
-            <li  class="list-group-item"> <a href="/templates/admin/public"> 商品分类列表</a></li>
+            <li  class="list-group-item"> <a href="/admin/role" target="rightMain"> 角色列表</a></li>
 
-            <li class="list-group-item"> <a href="/add" >增加商品分类</a></li>
+            <li class="list-group-item"> <a href="/admin/role/add" target="rightMain">增加角色</a></li>
         </ul>
     </li>
     <li>
         <h4>商品管理</h4>
 
         <ul>
-            <li  class="list-group-item"> <a href="/templates/admin/public"> 商品列表</a></li>
+            <li  class="list-group-item"> <a href="/"> 商品列表</a></li>
 
             <li class="list-group-item"> <a href="/add">增加商品</a></li>
         </ul>
@@ -32,11 +32,12 @@
         <h4>轮播图管理</h4>
 
         <ul>
-            <li  class="list-group-item"> <a href="/templates/admin/public">轮播图列表</a></li>
+            <li  class="list-group-item"> <a href="/">轮播图列表</a></li>
 
             <li class="list-group-item"> <a href="/add">轮播图商品</a></li>
         </ul>
     </li>
 
 </ul>
-{{ end }}
+
+{{end}}
