后台商品管理

--- a/templates/admin/manager/index.html
+++ b/templates/admin/manager/index.html
@@ -25,6 +25,7 @@
             <td>{{$value.Mobile}}</td>
             <td>{{$value.Email}}</td>
             <td>{{$value.Role.Title}}</td>
+            <td>{{$value.AddTime}}</td>
           
             <td class="text-center">
                 <a href="/admin/manager/edit?id={{$value.Id}}">修改</a> 
