--- a/templates/itying/cart/cart.html
+++ b/templates/itying/cart/cart.html
@@ -95,13 +95,15 @@
 				</div>
 				<div class="jiesuan fr">
 					<div class="jiesuanjiage fl">合计（不含运费）：<span id="allPrice">{{.allPrice}}元</span></div>
-					<div class="jsanniu fr"><input class="jsan" type="submit" name="jiesuan"  value="去结算"/></div>
+					<div class="jsanniu fr"><input class="jsan" id="checkout" type="submit" name="jiesuan"  value="去结算"/></div>
 					<div class="clear"></div>
 				</div>
 				<div class="clear"></div>
 			</div>
 			
 		</div>
+
+		
 		<!-- footer -->
 		{{ template "itying/public/page_footer.html" .}}
 	</body>
