--- a/templates/itying/pass/register_step3.html
+++ b/templates/itying/pass/register_step3.html
@@ -7,6 +7,7 @@
 		<title>用户注册</title>
 		<link rel="stylesheet" href="/static/itying/css/pass.css" />
 		<script src="/static/itying/js/jquery-1.10.1.js"></script>	
+		<script src="/static/itying/js/pass.js"></script>
 	</head>
 	<body class="register_page">
 		
@@ -23,23 +24,24 @@
 						<p>请输入您注册账户的密码</p>
 						<br>
 						<br>
+						<div class="error"></div>
 
 						<form action="/pass/doRegister" method="post" id="form">		
 														
 							<input type="hidden" name="sign" value="{{.sign}}" />
-							<input type="hidden" name="sms_code"  value="{{.sms_code}}"/>
+							<input type="hidden" name="smsCode"  value="{{.smsCode}}"/>
 							<div>
-								<input class="form_input" type="text" id="password" name="password" placeholder="请输入密码"/>
+								<input class="form_input" type="password" id="password" name="password" placeholder="请输入密码"/>
 							
 							</div>
 
 							<div>
-								<input class="form_input" type="text" id="rpassword" name="rpassword" placeholder="请输入确认密码"/>
+								<input class="form_input" type="password" id="rpassword" name="rpassword" placeholder="请输入确认密码"/>
 							
 							</div>
 
 							<div class="regist_submit">
-									<input class="submit" id="nextStep" type="submit" name="submit" value="完成注册" >
+									<input class="submit" type="submit" name="submit" value="完成注册" >
 
 							</div>
 						</form>
@@ -48,37 +50,7 @@
 					
 				</div>
 			</div>
-			<script>
-			
-				$(function(){
-					$("#form").submit(function(){
-
-						var password=$('#password').val();
-
-						var rpassword=$('#rpassword').val();
-
-
-						if(password.length<6){
-
-							alert('用户名的长度不能小于6位');
-
-							return false;
-						}
-						
-						if(password!=rpassword){
-
-							alert('密码和确认密码不一致');
-
-							return false;
-						}
-
-						return true;
-
 		
-
-					})
-				})
-			</script>
 	</body>
 </html>
 {{end}}
